# RL_AIHandkerchief

./: .gitignore  README.md  RL_AIHandkerchief.code-workspace  check_env.sh  piper_ctrl_joint.py  quick_start.sh  requirements.txt  setup_env.sh  test.py  test_mit_detailed.py  vicon_start.sh
src/piper_rl_deploy/: CMakeLists.txt  README.md  package.xml
src/piper_rl_deploy/config/: piper_rl_config.yaml  piper_rl_safe_config.yaml
src/piper_rl_deploy/include/piper_rl_deploy/: coordinate_test.hpp  model_loader.hpp  piper_rl_controller.hpp  piper_rl_safe_controller.hpp
src/piper_rl_deploy/launch/: coordinate_test.launch.py  piper_rl_deploy.launch.py  piper_rl_safe_deploy.launch.py
src/piper_rl_deploy/models/: README.md  model.onnx  model.pt  piper_policy.pt  policy.onnx  policy.pt
src/piper_rl_deploy/src/: coordinate_test.cpp  model_loader.cpp  piper_rl_controller.cpp  piper_rl_node.cpp  piper_rl_safe_controller.cpp  piper_rl_safe_node.cpp
src/piper_utils/piper/: MIT_MODE_README.md  MIT_QUICK_START.md  setup.py
src/piper_utils/piper/launch/: start_single_piper.launch.py  start_single_piper_rviz.launch.py
src/piper_utils/piper/piper/: piper_ctrl_single_node.py
src/piper_utils/piper/scripts/: __init__.py  simple_mit_thrower.py
src/piper_utils/piper_moveit/piper_no_gripper_moveit/config/: moveit.rviz
src/piper_utils/piper_msgs/: CMakeLists.txt
src/piper_utils/piper_msgs/msg/: JointMitCmd.msg  PosCmd.msg
